--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ski Schedule and Data"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
-    <title>React App</title>
+    <title>Ski Schedule</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
